# predicTCR

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_DEPLOYMENT.md  README_DEV.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/predicTCR_server/: __init__.py  app.py  email.py  logger.py  main.py  model.py  settings.py  utils.py
backend/tests/: conftest.py  test_app.py  test_model.py  test_utils.py
backend/tests/helpers/: flask_test_utils.py
frontend/: .dockerignore  .env.development  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.config.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css  news.json
frontend/src/components/: AboutEditor.vue  AccountComponent.vue  CardComponent.vue  CarouselComponent.vue  FooterComponent.vue  HeadingComponent.vue  JobsTable.vue  ListComponent.vue  ListItem.vue  LoginComponent.vue  MarkdownComponent.vue  NewsEditor.vue  RefreshButton.vue  ResetComponent.vue  SamplesTable.vue  SelectWithOther.vue  SettingsTable.vue  SignupComponent.vue  TitleComponent.vue  UsersTable.vue  vueperslides.d.ts
frontend/src/router/: index.ts
frontend/src/stores/: settings.ts
frontend/src/utils/: api-client.ts  types.ts  validation.ts
frontend/src/utils/__tests__/: validation.spec.ts
frontend/src/views/: AboutView.vue  ActivateView.vue  AdminView.vue  HomeView.vue  LoginView.vue  ResetPasswordView.vue  SamplesView.vue
frontend/tests/e2e/: home.cy.ts
runner/: Dockerfile  README.md  docker-compose.yml  env.yaml  pyproject.toml  runner.py
runner/script/: script.sh
runner/scripts/: script.sh
runner/src/predicTCR_runner/: main.py  runner.py
runner/tests/: test_runner.py
